.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
16:58:46 **** Build of configuration Debug for project 28indexApartament ****
make all 
Building file: ../src/28indexApartament.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/28indexApartament.d" -MT"src/28indexApartament.d" -o "src/28indexApartament.o" "../src/28indexApartament.c"
Finished building: ../src/28indexApartament.c
 
Building target: 28indexApartament
Invoking: GCC C Linker
gcc  -o "28indexApartament"  ./src/28indexApartament.o   
Finished building target: 28indexApartament
 
16:59:12 **** Incremental Build of configuration Debug for project 28indexApartament ****
make all 
Building file: ../src/28indexApartament.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/28indexApartament.d" -MT"src/28indexApartament.d" -o "src/28indexApartament.o" "../src/28indexApartament.c"
Finished building: ../src/28indexApartament.c
 
Building target: 28indexApartament
Invoking: GCC C Linker
gcc  -o "28indexApartament"  ./src/28indexApartament.o   
Finished building target: 28indexApartament
 
17:20:42 **** Incremental Build of configuration Debug for project 28indexApartament ****
make all 
Building file: ../src/28indexApartament.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/28indexApartament.d" -MT"src/28indexApartament.d" -o "src/28indexApartament.o" "../src/28indexApartament.c"
../src/28indexApartament.c: In function ‘main’:
../src/28indexApartament.c:35:3: warning: format ‘%d’ expects argument of type ‘int *’, but argument 2 has type ‘int’ [-Wformat=]
   scanf("%d", curr->apacaldabuc);
   ^
../src/28indexApartament.c:27:17: warning: variable ‘head’ set but not used [-Wunused-but-set-variable]
  recent *curr, *head;
                 ^
Finished building: ../src/28indexApartament.c
 
Building target: 28indexApartament
Invoking: GCC C Linker
gcc  -o "28indexApartament"  ./src/28indexApartament.o   
Finished building target: 28indexApartament
 
17:23:05 **** Incremental Build of configuration Debug for project 28indexApartament ****
make all 
Building file: ../src/28indexApartament.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/28indexApartament.d" -MT"src/28indexApartament.d" -o "src/28indexApartament.o" "../src/28indexApartament.c"
../src/28indexApartament.c: In function ‘main’:
../src/28indexApartament.c:27:17: warning: variable ‘head’ set but not used [-Wunused-but-set-variable]
  recent *curr, *head;
                 ^
Finished building: ../src/28indexApartament.c
 
Building target: 28indexApartament
Invoking: GCC C Linker
gcc  -o "28indexApartament"  ./src/28indexApartament.o   
Finished building target: 28indexApartament
 
17:23:50 **** Incremental Build of configuration Debug for project 28indexApartament ****
make all 
Building file: ../src/28indexApartament.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/28indexApartament.d" -MT"src/28indexApartament.d" -o "src/28indexApartament.o" "../src/28indexApartament.c"
../src/28indexApartament.c: In function ‘main’:
../src/28indexApartament.c:27:17: warning: variable ‘head’ set but not used [-Wunused-but-set-variable]
  recent *curr, *head;
                 ^
Finished building: ../src/28indexApartament.c
 
Building target: 28indexApartament
Invoking: GCC C Linker
gcc  -o "28indexApartament"  ./src/28indexApartament.o   
Finished building target: 28indexApartament
 
17:25:52 **** Incremental Build of configuration Debug for project 28indexApartament ****
make all 
Building file: ../src/28indexApartament.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/28indexApartament.d" -MT"src/28indexApartament.d" -o "src/28indexApartament.o" "../src/28indexApartament.c"
../src/28indexApartament.c: In function ‘main’:
../src/28indexApartament.c:27:17: warning: variable ‘head’ set but not used [-Wunused-but-set-variable]
  recent *curr, *head;
                 ^
Finished building: ../src/28indexApartament.c
 
Building target: 28indexApartament
Invoking: GCC C Linker
gcc  -o "28indexApartament"  ./src/28indexApartament.o   
Finished building target: 28indexApartament
 
17:27:54 **** Incremental Build of configuration Debug for project 28indexApartament ****
make all 
Building file: ../src/28indexApartament.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/28indexApartament.d" -MT"src/28indexApartament.d" -o "src/28indexApartament.o" "../src/28indexApartament.c"
../src/28indexApartament.c: In function ‘main’:
../src/28indexApartament.c:27:17: warning: variable ‘head’ set but not used [-Wunused-but-set-variable]
  recent *curr, *head;
                 ^
Finished building: ../src/28indexApartament.c
 
Building target: 28indexApartament
Invoking: GCC C Linker
gcc  -o "28indexApartament"  ./src/28indexApartament.o   
Finished building target: 28indexApartament
 
17:35:38 **** Incremental Build of configuration Debug for project 28indexApartament ****
make all 
Building file: ../src/28indexApartament.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/28indexApartament.d" -MT"src/28indexApartament.d" -o "src/28indexApartament.o" "../src/28indexApartament.c"
../src/28indexApartament.c: In function ‘main’:
../src/28indexApartament.c:27:17: warning: variable ‘head’ set but not used [-Wunused-but-set-variable]
  recent *curr, *head;
                 ^
Finished building: ../src/28indexApartament.c
 
Building target: 28indexApartament
Invoking: GCC C Linker
gcc  -o "28indexApartament"  ./src/28indexApartament.o   
Finished building target: 28indexApartament
 
17:46:48 **** Incremental Build of configuration Debug for project 28indexApartament ****
make all 
Building file: ../src/28indexApartament.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/28indexApartament.d" -MT"src/28indexApartament.d" -o "src/28indexApartament.o" "../src/28indexApartament.c"
Finished building: ../src/28indexApartament.c
 
Building target: 28indexApartament
Invoking: GCC C Linker
gcc  -o "28indexApartament"  ./src/28indexApartament.o   
Finished building target: 28indexApartament
 
17:52:29 **** Incremental Build of configuration Debug for project 28indexApartament ****
make all 
Building file: ../src/28indexApartament.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/28indexApartament.d" -MT"src/28indexApartament.d" -o "src/28indexApartament.o" "../src/28indexApartament.c"
../src/28indexApartament.c: In function ‘main’:
../src/28indexApartament.c:60:3: error: expected ‘;’ before ‘printf’
   printf("%d, %d, ", curr->apacaldabaie, curr->apacaldabuc);
   ^
make: *** [src/28indexApartament.o] Error 1
17:52:46 **** Incremental Build of configuration Debug for project 28indexApartament ****
make all 
Building file: ../src/28indexApartament.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/28indexApartament.d" -MT"src/28indexApartament.d" -o "src/28indexApartament.o" "../src/28indexApartament.c"
Finished building: ../src/28indexApartament.c
 
Building target: 28indexApartament
Invoking: GCC C Linker
gcc  -o "28indexApartament"  ./src/28indexApartament.o   
Finished building target: 28indexApartament
 
